[package]
name = "rs-gkr"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[dependencies]
pairing = "0.22.0"
thiserror = "1.0.26"
rand = { version = "0.8.4"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-poly = "0.4.0"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
num-bigint = "0.4.3"

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
lazy_static = "1.4.0"
criterion = "0.3"
pprof = { version = "0.6", features = ["flamegraph"] }
bincode = "1.3.3"
hex = "0.4.3"